# sota_client_cpp

./: CMakeLists.txt  Dockerfile  README.md
config/: config.toml.example
distribution/: sota.service.cmake
src/: CMakeLists.txt  commands.cc  commands.h  config.cc  config.h  events.h  eventsinterpreter.cc  httpclient.cc  main.cc  sotarviclient.cpp  sotarviclient.h  types.cc
src/dbusgateway/: HelloWorldClient.cpp  HelloWorldStubImpl.cpp  HelloWorldStubImpl.hpp  dbusgateway.cc  dbusgateway.h
src/dbusgateway/v1/commonapi/: HelloWorld.hpp  HelloWorldDBusDeployment.cpp  HelloWorldDBusDeployment.hpp  HelloWorldDBusProxy.cpp  HelloWorldDBusProxy.hpp  HelloWorldDBusStubAdapter.cpp  HelloWorldDBusStubAdapter.hpp  HelloWorldProxy.hpp  HelloWorldProxyBase.hpp  HelloWorldStub.hpp  HelloWorldStubDefault.cpp  HelloWorldStubDefault.hpp
tests/: CMakeLists.txt  commands_test.cc  httpclient_test.cc
tests/fake_http_server/: server.py
